fixed bug title not centered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,15 @@ header {
   justify-content: center;
   width: 100%;
   height: auto;
-  text-shadow: 2px 2px 3px black;
+  text-shadow: -2px 3px 6px rgb(44, 44, 44);
 } 
 header img {
   height: 128px;
+}
+header h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  color: rgb(184, 183, 183);
 }
 nav {
   background-image: linear-gradient(15deg, #0f1cce 0% , #e1e3fa 100% );
@@ -26,17 +31,22 @@ main {
   background-repeat: no-repeat;
 }
 .section-title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
   height: 100%;
   width: 100%;
   margin: 0;
   color: white;
-  text-shadow: 1px 1px 2px black;
+  text-shadow: -2px 3px 6px rgb(44, 44, 44);
 }
 #teams {
   text-align: center;
 }
 #teams h3 {
   background-color: rgba(0,0,0,0.4);
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  text-shadow: -2px 3px 6px rgb(44, 44, 44);
 }
 
 .box img{
@@ -76,24 +86,6 @@ main {
 .game-dates {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.game-dates:nth-of-type(1n+3){
-  display: block;
-}
-
-
-
-/* #address {
-  padding: 5px 10px;
-  flex: 1;
-  margin-right: 5px;
-}
-
-.results {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    min-width: 400px;
-} */
 
 .status {
     padding: 10px;
